package Classes.Exceptions;

public class LimiteInsuficienteException extends Exception {
    public LimiteInsuficienteException(String mensagem) {
        super(mensagem);
    }
}
