@startuml Módulo Exceptions (Visão Expandida)
skinparam classAttributeIconSize 0
left to right direction

package "Módulo Exceptions" as e #F9F9F9 {
    class Exception {}
    class ContaInativaException <<exception>> {
        + ContaInativaException(mensagem: String)
    }
    class SaldoInsuficienteException <<exception>> {
        + SaldoInsuficienteException(mensagem: String)
    }
    class LimiteInsuficienteException <<exception>> {
        + LimiteInsuficienteException(mensagem: String)
    }

    Exception <|-- ContaInativaException
    Exception <|-- SaldoInsuficienteException
    Exception <|-- LimiteInsuficienteException
}

package "Módulo Contas" #FEF9E7 {
    abstract class Conta <<abstract>>
}

package "Módulo Operações" #E8F8F5 {
    class Transacao
}

Conta ..> e : gera erros em operações
Transacao ..> e : valida regras com
@enduml